fix omnipresent scrollbars for Windows

--- a/src/chomp.scss
+++ b/src/chomp.scss
@@ -34,7 +34,7 @@ table.chocolate {
 
 div.table_container {
 	width: 100%;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 div.loader {
